--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
+li {
+  list-style: none;
+}
+
+#nav-logo {
+  width: 60px;
+  border: white solid 2px;
+  border-radius: 15%;
+}
+
+.Header {
+  background-color: rgb(71, 34, 92);
+  color: white;
+  border-bottom: white solid 5px;
+  font-family:  Helvetica, sans-serif;
+}
+
+#page-heading {
+  font-size: 2.4rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.body-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(71, 34, 92);
+  padding: 10px;
+}
+
+.editor-container {
+  width: 65%;
+  color: white;
+  text-align: center;
+  background-color: rgb(126, 59, 161);
+}
+
+.preview-container {
+  width: 65%;
+  color: white;
+  text-align: center;
+  background-color: rgb(126, 59, 161);
+}
+
+.line-break {
+  width: 65%;
+  border-bottom: white dotted 2px;
+  background-color: rgb(71, 34, 92);
+  margin: 10px;
+}
+
+textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 400px;
+  font-size: 1.8rem;
+}
+.text-area {
+  box-sizing: border-box;
+  width: 100%;
+  height: 400px;
+  /* border:1px solid black; */
+  background-color:#dadada;
+  white-space: pre-line;
+  /* padding:10px; */
+  font-size:1.8em;
+  display: inline-block;
+}
+.text-area {
+  width: 100%;
+}
+.body-heading {
+  margin: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
