--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,16 @@ html {
 li {
   list-style: none;
 }
+.App {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: rgb(71, 34, 92);
+  height: 100vh;
+}
+/* .navbar {
+  height: 7.5vh;
+} */
 
 #nav-logo {
   width: 60px;
@@ -38,6 +48,16 @@ li {
   padding: 10px;
 }
 
+.editor-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+#toggle-size-btn {
+
+}
+
+
 .editor-container {
   width: 65%;
   color: white;
@@ -62,13 +82,13 @@ li {
 textarea {
   box-sizing: border-box;
   width: 100%;
-  height: 400px;
+  height: 40vh;
   font-size: 1.8rem;
 }
-.text-area {
+.text-area-open {
   box-sizing: border-box;
   width: 100%;
-  height: 400px;
+  height: 40vh;
   /* border:1px solid black; */
   background-color:#dadada;
   white-space: pre-line;
@@ -76,13 +96,25 @@ textarea {
   font-size:1.8em;
   display: inline-block;
 }
+
+.text-area-close {
+  display: none;
+}
 .text-area {
+  box-sizing: border-box;
   width: 100%;
+  height: 40vh;
+  /* border:1px solid black; */
+  background-color:#ffffff;
+  /* padding:10px; */
+  font-size:1.8em;
+  display: inline-block;
+  text-align: left;
+  padding: 25px;
 }
 .body-heading {
   margin: 0px;
 }
-
 
 
 
