--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ textarea {
   box-sizing: border-box;
   width: 100%;
   height: 40vh;
+  overflow: scroll;
   /* border:1px solid black; */
   background-color:#ffffff;
   /* padding:10px; */
